--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@eslint/js": "^9.21.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
+    "@types/react-router-dom": "^5.3.3",
     "@types/react-scroll": "^1.8.10",
     "@vitejs/plugin-react-swc": "^3.8.0",
     "eslint": "^9.21.0",
